[gd_scene load_steps=2 format=3 uid="uid://cx3k0dsw2mfc0"]

[ext_resource type="Script" path="res://Scripts/win_popup.gd" id="1_xsi58"]

[node name="WinPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xsi58")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Congratulations!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="PointsLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Points earned: 0"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Continue Playing"

[node name="HomeButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Hub"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
